[gd_scene load_steps=7 format=3 uid="uid://bf4hy288nfxs5"]

[ext_resource type="Texture2D" uid="uid://bvikgqna10v64" path="res://assets/talismans/talisman holder.png" id="1_21o42"]
[ext_resource type="Script" path="res://source/actors/talisman_holder.gd" id="1_l1oij"]
[ext_resource type="SpriteFrames" uid="uid://sgf7ls0to0dl" path="res://assets/talismans/talisman.tres" id="2_jcjt8"]
[ext_resource type="AudioStream" uid="uid://s7r8iubb006x" path="res://assets/sound/blip_up.wav" id="4_r56uu"]
[ext_resource type="AudioStream" uid="uid://dn384jrcxovst" path="res://assets/sound/blip_down.wav" id="5_tbwct"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ntddk"]
size = Vector2(58, 74)

[node name="TalismanHolder" type="Node2D"]
z_index = 3
scale = Vector2(1.5, 1.5)
script = ExtResource("1_l1oij")

[node name="SpriteMain" type="Sprite2D" parent="."]
texture = ExtResource("1_21o42")

[node name="SpritesT" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("2_jcjt8")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_ntddk")

[node name="AudioUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_r56uu")
volume_db = -13.0
bus = &"SFX"

[node name="AudioDown" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_tbwct")
volume_db = -13.0
bus = &"SFX"

[node name="DebugLabel" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = -54.0
offset_right = 24.0
offset_bottom = -31.0
grow_horizontal = 2
text = "1       5"
